# vvmc

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: alignment.py  corpus.py  main.py  markov.py  preprocess.py  voicevox.py
backend/tests/: test_alignment.py  test_corpus.py  test_markov.py  test_preprocess.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Subtitle.tsx  api.ts  player.ts  styles.css
